# MetaKnogic-Alpha

./: .gitignore  Hypergraph_input_output_demo.txt  README.md  app_v3.py  app_v3_prod.py  check_neo4j.py  example_contexts.json  main.py  metabolic_prompt_rewritting.py  old_prompt_system  prompt_tool.py  pyproject.toml  requirements.txt  sentence_emb_model.py  temp  temp2  utils_for_graph_v2.py
hypergraphrag/: hypergraphrag.py  llm.py  operate.py  prompt.py
hypergraphrag/kg/: neo4j_impl.py
metabolite_network_integration/: 20260116_core_reactions_012026_M_v1.2.csv  MPO_Constraints_112025_M_v1.1.RData  building_metabolic_network.py  metabolic_runtime.py  total_human_C_stat_check_working7.xlsx
metabolite_network_integration/metabolic_graph_outputs/: gene_symbols.json  met_graph.pkl
metabolite_network_integration/unused_files/Fw_After eliminating duplicated Gid Cid/: BDRL_R_C_stat_add_no_F3_gid_cid.csv  MPO_constrains_BDRL_012026_v1.2.RData
metabolite_network_integration/unused_files/Re_Metabolic network data/: total_human_C_stat_check_working7.xlsx
static_v3/: about.html  about_gemini.html  i1.html  i2.html  index_gemini.html  output.txt
