[project]
name = "webdemokhgrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "accelerate>=1.11.0",
    "aioboto3>=15.5.0",
    "aiohttp>=3.13.2",
    "fastapi>=0.121.2",
    "graspologic>=3.4.4",
    "hnswlib>=0.8.0",
    "jsonlines>=4.0.0",
    "nano-vectordb>=0.0.4.3",
    "neo4j>=6.0.3",
    "networkx>=3.5",
    "nltk>=3.9.2",
    "ollama>=0.6.1",
    "openai>=2.8.1",
    "oracledb>=3.4.1",
    "pymilvus>=2.6.3",
    "pymongo>=4.15.4",
    "pymysql>=1.1.2",
    "pypdf2>=3.0.1",
    "pyvis>=0.3.2",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "torch==2.3.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
    "xxhash>=3.6.0",
]
